# svgcheck

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REVIEW.txt  __init__.py  appveyor.yml  deploy_key  deploy_key.enc  deploy_key.pub  deploy_key2.enc  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: checks.yml  pr-checks.yml  pypi-publish.yml
common/: #x  __init__.py  log.py  parser.py  test.py  utils.py
common/Tests/: entity-http.xml  include1.xml
rfclint/: LICENSE  MANIFEST.in  README.rst  changelog  requirements.txt  setup.py  sitecustomize.py
rfclint/linux/: bap
rfclint/macos/: bap
rfclint/rfclint/: .coveragerc  ARrfc8187v2.xml  CursesCommon.py  __init__.py  abnf-torture.xml  abnf.py  config.py  dups.py  foo  hoffman-v3example-upd-with-multerr-abnf.xml  must.py  pycode.cfg  run.py  spell.py  spell1.xml  temp.xml  test.py  test8525yang-svg-badfile-29May.xml
rfclint/rfclint/Results/: Dups1.err  Dups1.out  Dups1.xml  Dups2.err  Dups2.out  Dups2.xml  DupsB.err  DupsX.err  Spell1.err  Spell1.out  Spell1.xml  abnf-bad-extras.err  abnf-clean.err  abnf-extras-no.err  abnf-extras-not.err  abnf-extras.err  abnf-no-program.err  abnf-one.err  abnf-three.err  abnf.cfg  abnf_add_rules.cfg  abnf_error_one_skip.err  bad.err  bad_rfc.err  bad_rfc_svg.err  bcp14-2.err  bcp14-2.xml  bcp14.err  color.err  en-1.pws  extract.txt  extract_none.err  extract_one.out  no-abnf.err  spell-01-60.err  spell-01.err  spell-02.cfg  spell-03.cfg  spell-04.cfg  spell-05.cfg  (+29 more)
rfclint/rfclint/Tests/: Dups1.in  Dups2.in  Interact1.xml  REAME.md  Spell1.in  abnf-bad-extras.abnf  abnf-clean.xml  abnf-extras.abnf  abnf-extras.xml  abnf-one.xml  abnf-three.xml  abnf.xml  bad.xml  bad2.xml  bad_rfc.xml  bad_rfc_svg.xml  bcp14-2.xml  bcp14.xml  dups.xml  dups2.xml  empty.cfg  good.xml  reference.RFC.1847.xml  rfc.xml  schaad.aff  schaad.dic  schaad.wl  spell-utf8.xml  spell.xml  spell1.xml  spell2.xml  svg.xml  xmlfrag1.xml  xmlfrag2.xml  xmlfrag3.xml  xmlfrag4.xml  xxx.xml  yang.xml
rfctools_common/: MANIFEST.in  README.rst  changelog  requirements.txt  setup.py
rfctools_common/rfctools_common/: __init__.py  log.py  parser.py  pycode.cfg  test.py  utils.py
rfctools_common/rfctools_common/Tests/: doc_fr_latin1.xml  dtd.xml  entity.xml  good.xml  include-http.xml  include2.xml  network-dtd.xml  pi_include.xml  simple.xml
rfctools_common/rfctools_common/templates/: rfc2629.dtd  rfc7991.rng
svgcheck/: .coveragerc  MANIFEST.in  README.rst  __init__.py  changelog  checksvg.py  log.py  requirements.txt  rewrite.x  run.py  setup.py  test.py  word_properties.py
svgcheck/Results/: IETF-test.out  colors.err  colors.out  dia-sample-svg.out  example-dot.out  full-tiny-02.err  full-tiny.err  full-tiny.xml  good.err  malformed.out  rfc-01.err  rfc-02.out  rfc-svg.err  rfc.out  svg-wordle.out  utf8.err  utf8.out  version.out  viewBox-both.out  viewBox-none.out  viewBox-width.out
svgcheck/svgcheck/: __init__.py  checksvg.py  run.py  test.py  word_properties.py
svgcheck/svgcheck/Results/: DrawBerry-sample-2.out  IETF-test.out  circle.out  colors.err  colors.out  full-tiny.err  (+18 more)
win32/hunspell/: en_GB.dic
winbuild/: appveyor_install_pypy.cmd
xmldiff/: MANIFEST.in  README.rst  changelog  requirements.txt  setup.py  torture.py  zzs_build.py
xmldiff/Test/: draft-ietf-curdle-pkix-01.xml  draft-ietf-curdle-pkix.xml  draft-schaad-curdle-oid-registry-00.xml  setup.cfg  test.py  torture.py  xmldiff.html
xmldiff/xmldiff/: =test.html  DiffNode.py  EditDistance.py  EditItem.py  Test1.xml  Test2.xml  __init__.py  doc_utf8.xml  draft-atarius-dispatch-meid-urn-as-instanceid-08v3.original.xml  draft-atarius-dispatch-meid-urn-as-instanceid-08v3.xml  new.xml  rfc8410.original.xml  rfc8410.xml  run.py  sandy.original.xml  sandy.xml  test.html  test.py  test1.html  xmldiff.html  zzs.c  zzs.py  zzs2.py  zzs_build.py
(+125 files in other folders)
