[metadata]
version = 0.7.0
name = svgcheck
description = Verify that an svg file is compliant with the RFC standards.
long_description = file:  README.md, LICENSE
long_description_content_type = text/markdown
keywords = svg, validation, rfc
author = IETF Tools Team
license = BSD-3-Clause
url = https://github.com/ietf-tools/svgcheck
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Other Audience
	Topic :: Text Processing
	Topic :: Text Processing :: Markup :: XML
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages = svgcheck, svgcheck.Results, svgcheck.Tests, svgcheck.Tests.cache_saved
python_requires = >=3.7, <3.12
install_requires =
    lxml>=4.1.1
    xml2rfc>=3.16.0
include_package_data = True
tests_require = 
	pycodestyle
	pyflakes>=0.8.1
zip_safe = False

[options.entry_points]
console_scripts = 
	svgcheck = svgcheck.run:main

[options.package_data]
* = 
	pycode.cfg
	Results/*
	Tests/*.*
	Tests/cache_saved/*.*
